# SmartGuide-AI

./: .gitignore  DESCRIPTION.md  LICENSE  MANIFEST.in  README.md  browser-extension.crx  build.bat  build.js  build_installer.bat  install.bat  installer.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.bat  setup.py  start_server.bat  uninstaller.bat
android-app/: gradlew.bat  local.properties  settings.gradle
android-app/app/: build.gradle
browser-extension/: INSTALL.md  manifest.json
browser-extension/background/: background.js  system-prompt.js
browser-extension/chat/: chat-ui.js  chat.css  chat.html
browser-extension/content/: content.js  highlight.js
browser-extension/popup/: popup.css  popup.html  popup.js
browser-extension/utils/: constants.js  storage.js  websocket-client.js
desktop-app/: SmartGuideAI.spec  auto_start.py  floating_chat.py  floating_chat.spec  install_log.txt  launcher.py  main.py  setup.py  smartguide_service.py
desktop-app/ai/: __init__.py  groq_handler.py  local_ai_handler.py  prompt_templates.py
desktop-app/automation/: __init__.py  keyboard_controller.py  mouse_controller.py  screen_analyzer.py  window_manager.py
docs/: index.html
installer/: SmartGuideAI_Setup.spec  build_exe.bat  install.bat  install.py  setup.iss
mobile-app/: build_apk.bat  build_apk.py  buildozer.spec  index.html  main.py  manifest.json  sw.js
releases/: INSTALL.md
server/: build_exe.bat  requirements.txt  server.py  server_silent.py  start_server.bat  start_silent.bat
shared/: message_types.json
(+19 files in other folders)
