[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smartguide-ai"
version = "1.0.0"
description = "SmartGuide AI - Browser automation and assistance server"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "FitFocusHub"}]
requires-python = ">=3.8"
dependencies = [
    "websockets>=11.0",
    "pyautogui>=0.9.53",
    "pyperclip>=1.8.0",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
windows = ["pygetwindow>=0.0.9"]

[project.scripts]
smartguide-server = "server.server:main"

[project.urls]
Homepage = "https://github.com/FitFocusHub/SmartGuide-AI"
Repository = "https://github.com/FitFocusHub/SmartGuide-AI"

[tool.setuptools.packages.find]
include = ["server*"]
